# django-payments-redsys

./: .env  .gitignore  Justfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
payments_redsys/: __init__.py  test_redsys.py
sample/: apps.py  forms.py  models.py  settings.py  urls.py  views.py
sample/migrations/: 0001_initial.py
sample/templates/: base.html
sample/templates/sample/: failure.html  payment-form.html  payment.html  success.html
